--- a/src/styles/mobile-style.less
+++ b/src/styles/mobile-style.less
@@ -2,9 +2,11 @@
 @import "mixins/mixins";
 @import "base/fonts";
 @import "base/base-common";
+@import "modules/host";
 
 body {
     padding: 1px;
+    background: transparent;
 }
 
 .main {
@@ -33,7 +35,7 @@ body {
         box-shadow: 0 0px 20px 0 rgba(0,0,0,.2);
 
         &__logo {
-            background-image: url(img/logo-new.svg);
+            background-image: url(img/logo.svg);
             width: 35px;
             height: 37px;
             background-repeat: no-repeat;
