--- a/src/templates/button.html
+++ b/src/templates/button.html
@@ -1,5 +1,1 @@
-<div class="adguard-alert adguard-assistant-button-fixed">
-  <span class="adguard-a-logo">
-      <span class="adguard-logo"></span>
-  </span>
-</div>
+<div class="adguard-alert adguard-assistant-button-fixed"></div>
