--- a/src/templates/mainMenu.html
+++ b/src/templates/mainMenu.html
@@ -11,8 +11,7 @@
             </a>
         </div>
         <div class="menu-head_text wot-hide" id="WotDescriptionText">
-            <a id="WotLogo" href="#"><span
-                class="wot-logo"></span></a>
+            <a id="WotLogo" href="#"><span class="wot-logo"></span></a>
         </div>
     </div>
     <div class="menu-filter">
@@ -24,23 +23,10 @@
         </div>
     </div>
     <div class="menu">
-        <div id="do-not-block-30-sec" class="menu__btn menu__btn--clock" i18n="menu_do_not_filter_30_sec">
-            Do not block for 30 seconds
-        </div>
-        <div id="block-ad" class="menu__btn menu__btn--landscape" i18n="menu_block_ad_on_site">
-            Block an ad on this page
-        </div>
-        <div id="report-abuse" class="menu__btn menu__btn--report" i18n="menu_report_abuse">
-            Report an issue with this website
-        </div>
-        <div id="site-report" class="menu__btn menu__btn--security" i18n="menu_site_report">
-            Open website security report
-        </div>
-        <div id="extensions" class="menu__btn menu__btn--extensions" i18n="menu_extensions">
-            Extensions
-        </div>
-        <div id="assistant-settings" class="menu__btn menu__btn--settings" i18n="menu_settings">
-            Assistant settings
-        </div>
+        <div id="do-not-block-30-sec" class="menu__btn menu__btn--clock" i18n="menu_do_not_filter_30_sec"></div>
+        <div id="block-ad" class="menu__btn menu__btn--landscape" i18n="menu_block_ad_on_site"></div>
+        <div id="report-abuse" class="menu__btn menu__btn--report" i18n="menu_report_abuse"></div>
+        <div id="site-report" class="menu__btn menu__btn--security" i18n="menu_site_report"></div>
+        <div id="assistant-settings" class="menu__btn menu__btn--settings" i18n="menu_settings"></div>
     </div>
 </div>
