--- a/src/styles/base/buttons.less
+++ b/src/styles/base/buttons.less
@@ -2,13 +2,10 @@
 // Buttons
 // --------------------------------------------------
 
-
-
-
 .btn {
     display: inline-block;
     margin-bottom: 0;
-    padding: 11px 17px 9px;
+    padding: 10px 20px;
     font-size: 13px;
     line-height: 18px;
     text-align: center;
@@ -121,49 +118,6 @@
         background: @btn-cancel-color;
     }
 }
-
-
-
-// Link buttons
-// -------------------------
-
-// Make a button look and behave like a link
-/*
-.btn-link {
-  color: @link-color;
-  font-weight: normal;
-  cursor: pointer;
-  border-radius: 0;
-
-  &,
-  &:active,
-  &[disabled],
-  fieldset[disabled] & {
-    background-color: transparent;
-    .box-shadow(none);
-  }
-  &,
-  &:hover,
-  &:focus,
-  &:active {
-    border-color: transparent;
-  }
-  &:hover,
-  &:focus {
-    color: @link-hover-color;
-    text-decoration: underline;
-    background-color: transparent;
-  }
-  &[disabled],
-  fieldset[disabled] & {
-    &:hover,
-    &:focus {
-      color: @btn-link-disabled-color;
-      text-decoration: none;
-    }
-  }
-}
-*/
 
 // Button Sizes
 // --------------------------------------------------
