--- a/src/styles/base/fonts.less
+++ b/src/styles/base/fonts.less
@@ -1,15 +1,18 @@
 // Fonts
+
+@import (inline) "fonts.css";
+
 .weight-regular {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Arial, sans-serif;
+    font-family: "Open Sans", Arial, sans-serif;
     font-weight: 400;
 }
 
 .weight-medium {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Arial, sans-serif;
+    font-family: "Open Sans", Arial, sans-serif;
     font-weight: 600;
 }
 
 .weight-bold {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", Arial, sans-serif;
+    font-family: "Open Sans", Arial, sans-serif;
     font-weight: 700;
 }
