--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -1,36 +1,23 @@
 @import "base/variables";
 @import "mixins/mixins";
 @import "base/fonts";
-
-:host {
-    display: block!important;
-    z-index: 9999999999!important;
-    position: relative!important;
-    width: 0!important;
-    height: 0!important;
-    margin: 0 !important;
-    padding: 0 !important;
-    overflow: hidden!important;
-}
+@import "modules/host";
 
 .adguard-alert {
     cursor: pointer;
     left: 0;
     top: 0;
     position: fixed !important;
-    font: 12px Arial, sans-serif !important;
-    line-height: 1.5 !important;
     z-index: 2147483646 !important;
-    width: auto !important;
-    background: none !important;
-    height: auto !important;
+    width: 60px !important;
+    height: 60px !important;
     zoom: 1 !important;
     display: inline-block !important;
     margin: 0 !important;
     border: 0 !important;
     padding: 0 !important;
     will-change: transform;
-    opacity: 0.7;
+    opacity: 1;
     touch-action: none;
     -ms-touch-action: none;
     visibility: visible !important;
@@ -38,9 +25,28 @@
     max-height: auto !important;
     min-width: auto !important;
     max-width: auto !important;
+    background-image: url("img/logo.svg")!important;
+    background-size: 30px!important;
+    background-position: 50% 17px!important;
+    background-repeat: no-repeat!important;
+    background-color: #fff!important;
+    border: none !important;
+    box-shadow: 0 0 10px 3px rgba(162, 161, 161, .3) !important;
+    border-radius: 100% !important;
 
     &.sg_hide_element {
         display: none!important;
+    }
+
+    &.logo-small {
+        width: 30px !important;
+        height: 30px !important;
+        background-position: 50% 8px!important;
+        background-size: 16px!important;
+    }
+
+    &:hover {
+        background-color: @base-color-hover!important;
     }
 }
 
@@ -86,52 +92,6 @@
     left: auto;
     right: 0;
     transform: translate3d(-5px, -5px, 0);
-}
-
-.adguard-logo {
-    display: inline-block !important;
-    vertical-align: top !important;
-    width: 1em !important;
-    line-height: 1 !important;
-    background: url("img/logo.svg") no-repeat 0 0/cover !important;
-    font-size: inherit !important;
-}
-
-.adguard-a-logo:hover .adguard-logo {
-    background-image: url("img/logo.svg") !important;
-}
-
-.adguard-a-logo:hover {
-    background: @base-color-hover!important;
-}
-
-.adguard-logo__white {
-    background-image: url("img/logo-white.svg") !important;
-}
-
-.adguard-a-logo {
-    display: inline-block !important;
-    box-sizing: border-box !important;
-    vertical-align: top !important;
-    width: 40px !important;
-    height: 40px !important;
-    padding: 10px 0 0 !important;
-    font-size: 20px !important;
-    text-align: center !important;
-    border: 1px solid #cdcdcd !important;
-    border-radius: 50% !important;
-    background: #fff !important;
-}
-
-.adguard-a-logo__small {
-    width: 24px !important;
-    height: 24px !important;
-    font-size: 12px !important;
-    padding: 6px 0 0 !important;
-}
-
-.adguard-logo:before {
-    content: "\00a0" !important;
 }
 
 .adguard-assistant-button-bottom.adguard-assistant-button-respect-vk {
