--- a/src/templates/settingsMenu.html
+++ b/src/templates/settingsMenu.html
@@ -2,56 +2,38 @@
     <div class="close"></div>
 
     <div class="head">
-        <div i18n="assistant_settings" class="head_title">
-        </div>
-        <div i18n="settings_choose_size_and_position" class="head_text head_text--mobile-h">
-        </div>
+        <div i18n="assistant_settings" class="head_title"></div>
+        <div i18n="settings_choose_size_and_position" class="head_text head_text--mobile-h"></div>
     </div>
 
     <div class="content">
         <div class="settings settings__horizontal">
-
             <div class="settings_fieldset">
-                <div i18n="settings_icon_size" class="settings_fieldset_lbl">
-                </div>
+                <div i18n="settings_icon_size" class="settings_fieldset_lbl"></div>
                 <div class="settings_fieldset_val">
                     <div class="choice-size">
                         <div class="choice-size_group">
                             <div class="choice-size_field">
-                                <input class="choice-size_input form-ui-control" id="size-small" type="radio"
-                                       name="radio">
+                                <input class="choice-size_input form-ui-control" id="size-small" type="radio" name="radio">
                                 <label class="form-ui" for="size-small">
-                                <span i18n="settings_small" class="form-ui-txt">
-                                </span>
+                                    <span i18n="settings_small" class="form-ui-txt"></span>
                                 </label>
-                            <span class="choice-size_logo">
-                                <span class="a-logo a-logo__small">
-                                    <span class="logo"></span>
-                                </span>
-                            </span>
+                                <div class="choice-size_logo logo__small"></div>
                             </div>
                             <div class="choice-size_field">
-                                <input class="choice-size_input form-ui-control" id="size-big" type="radio"
-                                       name="radio">
+                                <input class="choice-size_input form-ui-control" id="size-big" type="radio" name="radio">
                                 <label class="form-ui" for="size-big">
-                                <span i18n="settings_big" class="form-ui-txt">
-                                </span>
+                                    <span i18n="settings_big" class="form-ui-txt"></span>
                                 </label>
-                            <span class="choice-size_logo">
-                                <span class="a-logo">
-                                    <span class="logo"></span>
-                                </span>
-                            </span>
+                                <div class="choice-size_logo"></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-
             <div class="settings_fieldset">
-                <div i18n="settings_position" class="settings_fieldset_lbl settings_fieldset_lbl__pos">
-                </div>
+                <div i18n="settings_position" class="settings_fieldset_lbl settings_fieldset_lbl__pos"></div>
                 <div class="settings_fieldset_val">
                     <div class="change-position">
                         <div class="change-position_i">
@@ -90,10 +72,8 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-
 
     <div class="foot">
         <div class="foot_action">
