--- a/src/styles/modules/settings.less
+++ b/src/styles/modules/settings.less
@@ -25,6 +25,7 @@
         }
     }
 }
+
 // change-size
 .choice-size {
     position: relative;
@@ -41,13 +42,13 @@
     &_logo {
         display: none;
         position: absolute;
-        top: 0;
-        right: 10px;
-        width: 60px;
-        height: 60px;
+        top: 10px;
+        right: 15px;
+        width: 40px;
+        height: 40px;
         background-image: url("img/logo.svg");
-        background-size: 30px;
-        background-position: 50% 17px;
+        background-size: 21px;
+        background-position: 50% 11px;
         background-repeat: no-repeat;
         background-color: #fff;
         border: none ;
