--- a/src/styles/modules/wot.less
+++ b/src/styles/modules/wot.less
@@ -5,6 +5,7 @@
 .wot-indicator{
     display: inline-block;
     vertical-align: top;
+    margin-right: 5px;
 }
 
 #WotDescriptionText{
@@ -47,6 +48,7 @@
     width: 52px;
     height: 18px;
     display: inline-block;
+    vertical-align: middle;
 }
 
 .adg-wot-confidence-0 {
