--- a/src/styles/selector.less
+++ b/src/styles/selector.less
@@ -1,53 +1,14 @@
 // common global styles
 
+iframe#adguard-assistant-dialog {
+    position: fixed;
+    clip: auto;
+    border-radius: 3px;
+    box-shadow: 0 0 10px 3px rgba(162, 161, 161, .3);
+}
+
 .sg_hide_element {
     display: none!important;
-}
-
-.sg_border {
-    position: absolute !important;
-    z-index: 2147483646 !important;
-    background: white !important;
-    background-color: #13a35e !important;
-    margin: 0px !important;
-    padding: 0px !important;
-    display: block;
-    float: none !important;
-    border: 0 !important;
-    font-style: normal !important;
-    outline: 0 !important;
-    vertical-align: baseline !important;
-    text-align: left !important;
-    line-height: 12px;
-    box-sizing: content-box !important;
-    min-height: auto !important;
-    max-height: auto !important;
-    min-width: auto !important;
-    max-width: auto !important;
-}
-
-.sg_bottom_border {
-    font-size: 10px !important;
-    font-weight: bold;
-    color: white !important;
-    padding: 2px 0px 2px 5px !important;
-    overflow: hidden !important;
-}
-
-.sg_border_red {
-    background-color: #F00 !important;
-}
-
-.sg_highlighted {
-}
-
-.sg_rejected {
-    background-color: #FA8072 !important;
-    background-image: none !important;
-}
-
-img.sg_rejected {
-    border: 5px solid #F00 !important;
 }
 
 img.sg_selected {
