--- a/src/templates/mainMenu.html
+++ b/src/templates/mainMenu.html
@@ -3,15 +3,15 @@
     <div class="menu-head">
         <div class="menu-head_title">
             <span class="menu-head_name"></span>
-            <a class="wot-indicator wot-hide" target="_blank" href="http://adguard.com/wot-scorecard.html?domain=habrahabr.ru">
-                <i id="WotIndication" class="adg-wot tooltip" data-title="Site reputation indicator"></i>
-            </a>
-            <a class="confidence-indication wot-hide" href="#">
+            <div class="confidence-indication wot-hide">
+                <a class="wot-indicator wot-hide" target="_blank" href="http://adguard.com/wot-scorecard.html?domain=habrahabr.ru">
+                    <i id="WotIndication" class="adg-wot tooltip" data-title="Site reputation indicator"></i>
+                </a>
                 <i id="ConfidenceIndication" class="adg-wot-confidence tooltip" data-title="Reputation Confidence Level"></i>
-            </a>
+            </div>
         </div>
         <div class="menu-head_text wot-hide" id="WotDescriptionText">
-            <a id="WotLogo" href="#"><span class="wot-logo"></span></a>
+            <a id="WotLogo" href="https://www.mywot.com/"><span class="wot-logo"></span></a>
         </div>
     </div>
     <div class="menu-filter">
