--- a/src/styles/modules/menu.less
+++ b/src/styles/modules/menu.less
@@ -1,11 +1,6 @@
 // menu
 
-#adguard-assistant-dialog {
-    position: fixed;
-    clip: auto;
-    border-radius: 3px;
-    box-shadow: 0 0 10px 3px rgba(162, 161, 161, .3);
-}
+@import "../selector";
 
 .menu-head {
     padding: @base-offset - 2 @base-offset;
@@ -25,8 +20,9 @@
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
-        max-width: 230px;
+        max-width: 260px;
         line-height: 26px;
+        margin: 0 10px 5px 0;
     }
 
     &_text {
