--- a/src/styles/selector.less
+++ b/src/styles/selector.less
@@ -11,7 +11,7 @@ iframe#adguard-assistant-dialog {
     display: none!important;
 }
 
-img.sg_selected {
+img.adguard_sg_selected {
     border: 5px solid #0F0 !important;
 }
 
@@ -40,7 +40,7 @@ img.sg_selected {
     float: left !important;
 }
 
-#_sg_div .sg_selected_option {
+#_sg_div .adguard_sg_selected_option {
     text-decoration: underline;
 }
 
