--- a/src/templates/selectorMenu.html
+++ b/src/templates/selectorMenu.html
@@ -1,4 +1,4 @@
-<div class="main sg_ignore">
+<div class="main adguard_sg_ignore">
     <div class="close adg-close" id="close-button"></div>
     <div class="head" id="drag-handle">
         <div i18n="assistant_select_element" class="head_title"></div>
