--- a/src/styles/modules/wot.less
+++ b/src/styles/modules/wot.less
@@ -8,8 +8,12 @@
     margin-right: 5px;
 }
 
-#WotDescriptionText{
+#WotDescriptionText {
     white-space: pre-line;
+
+    #WotLogo {
+        cursor: pointer;
+    }
 }
 
 .adg-wot {
@@ -75,20 +79,20 @@
     background-image: url(img/wot-confidence-5.svg);
 }
 
-
 .confidence-indication,
-.wot-indicator{
+.wot-indicator {
     text-decoration: none;
     vertical-align: middle;
-    &:hover{
+
+    &:hover {
         text-decoration: none;
     }
 }
 
 .confidence-indication {
     display: inline-block;
+    margin-right: 10px;
 }
-
 
 .wot-logo{
     display: inline-block;
