--- a/src/templates/mainMenu.html
+++ b/src/templates/mainMenu.html
@@ -10,10 +10,9 @@
                 <i id="ConfidenceIndication" class="adg-wot-confidence tooltip" data-title="Reputation Confidence Level"></i>
             </div>
         </div>
-        <div class="menu-head_text wot-hide" id="WotDescriptionText">
-            <a id="WotLogo" href="https://www.mywot.com/"><span class="wot-logo"></span></a>
-        </div>
+        <div class="menu-head_text wot-hide" id="WotDescriptionText"></div>
     </div>
+
     <div class="menu-filter">
         <div i18n="menu_filtration_status" class="menu-filter_lbl">
         </div>
@@ -22,6 +21,7 @@
             <label for="is-filter" class="menu-filter_label"></label>
         </div>
     </div>
+
     <div class="menu">
         <div id="do-not-block-30-sec" class="menu__btn menu__btn--clock" i18n="menu_do_not_filter_30_sec"></div>
         <div id="block-ad" class="menu__btn menu__btn--landscape" i18n="menu_block_ad_on_site"></div>
