--- a/src/styles/modules/menu.less
+++ b/src/styles/modules/menu.less
@@ -57,6 +57,7 @@
         background-color: @assist-red37light;
         cursor: pointer;
         transition: all 0.3s ease;
+        float: right;
 
         &:after {
             content: "";
