--- a/src/styles/base/base-common.less
+++ b/src/styles/base/base-common.less
@@ -1,7 +1,10 @@
 // Base common
 
+@import "variables";
+@import "../mixins/mixins";
 @import "normalize";
 @import "scaffolding";
 @import "forms";
+@import "fonts";
 @import "form-ui";
 @import "buttons";
