--- a/src/styles/base/buttons.less
+++ b/src/styles/base/buttons.less
@@ -2,6 +2,10 @@
 // Buttons
 // --------------------------------------------------
 
+.adguard-assistant-button-main-logo {
+    background-image: url("../img/logo.svg")!important;
+}
+
 .btn {
     display: inline-block;
     margin-bottom: 0;
