--- a/src/templates/button.html
+++ b/src/templates/button.html
@@ -1,1 +1,1 @@
-<div class="adguard-alert adguard-assistant-button-fixed"></div>
+<div class="adguard-alert adguard-assistant-button-fixed adguard-assistant-button-main-logo"></div>
