--- a/src/templates/mobilePopup.html
+++ b/src/templates/mobilePopup.html
@@ -1,5 +1,5 @@
 <div class="main mobile main-popup">
-    <div class="main-popup__logo"></div>
+    <div class="main-popup__logo adguard-assistant-button-main-logo"></div>
     <h2 class="mobile-title main-popup__title" i18n="assistant_select_element"></h2>
     <div class="content main-popup__content" i18n="assistant_select_element_text"></div>
     <div class="footer">
