--- a/src/templates/settingsMenu.html
+++ b/src/templates/settingsMenu.html
@@ -18,14 +18,14 @@
                                 <label class="form-ui" for="size-small">
                                     <span i18n="settings_small" class="form-ui-txt"></span>
                                 </label>
-                                <div class="choice-size_logo logo__small"></div>
+                                <div class="adguard-assistant-button-main-logo choice-size_logo logo__small"></div>
                             </div>
                             <div class="choice-size_field">
                                 <input class="choice-size_input form-ui-control" id="size-big" type="radio" name="radio">
                                 <label class="form-ui" for="size-big">
                                     <span i18n="settings_big" class="form-ui-txt"></span>
                                 </label>
-                                <div class="choice-size_logo"></div>
+                                <div class="adguard-assistant-button-main-logo choice-size_logo"></div>
                             </div>
                         </div>
                     </div>
