--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -2,6 +2,10 @@
 @import "mixins/mixins";
 @import "modules/host";
 
+.adguard-assistant-button-main-logo {
+    background-image: url("img/logo.svg")!important;
+}
+
 .adguard-alert {
     cursor: pointer;
     left: 0;
