--- a/src/styles/mobile-style.less
+++ b/src/styles/mobile-style.less
@@ -35,6 +35,10 @@ body {
         &__logo {
             width: 35px;
             height: 37px;
+
+            &.adguard-assistant-button-main-logo {
+                background-image: url("img/logo.svg");
+            }
         }
 
         &__title {
