--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -35,7 +35,7 @@
     border: none !important;
     box-shadow: 0 0 10px 3px rgba(162, 161, 161, .3) !important;
     border-radius: 100% !important;
-    transition: background .3s ease;
+    transition: background-color .3s ease;
 
     &.sg_hide_element {
         display: none!important;
