Add media print style

--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -53,6 +53,12 @@
     }
 }
 
+@media print {
+    .adguard-alert {
+        display: none!important;
+    }
+}
+
 .adguard-assistant-button-right {
     left: auto;
     right: 0;
