--- a/src/styles/modules/host.less
+++ b/src/styles/modules/host.less
@@ -7,6 +7,10 @@
     height: 0!important;
     margin: 0!important;
     padding: 0!important;
-    overflow: hidden!important;
     z-index: 9999999999!important;
+
+    ::after,
+    ::before {
+        display: none!important;
+    }
 }
