--- a/src/styles/modules/host.less
+++ b/src/styles/modules/host.less
@@ -1,5 +1,5 @@
 // shadow dom root element styles
-
+// do not use `overflow: hidden` for host element. See: https://github.com/w3c/webcomponents/issues/672
 :host {
     display: block!important;
     position: relative!important;
