--- a/src/templates/settingsMenu.html
+++ b/src/templates/settingsMenu.html
@@ -72,6 +72,27 @@
                     </div>
                 </div>
             </div>
+            <div class="settings_fieldset">
+                <div i18n="settings_position_save" class="settings_fieldset_lbl"></div>
+                <div class="settings_fieldset_val">
+                    <div class="position-save">
+                        <div class="position-save_group">
+                            <div class="position-save_field">
+                                <input class="form-ui-control" id="all-site" type="radio" name="position-save">
+                                <label class="form-ui" for="all-site">
+                                    <span i18n="settings_position_save_all" class="form-ui-txt"></span>
+                                </label>
+                            </div>
+                            <div class="position-save_field">
+                                <input class="form-ui-control" id="this-site" type="radio" name="position-save">
+                                <label class="form-ui" for="this-site">
+                                    <span i18n="settings_position_save_this" class="form-ui-txt"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
