--- a/src/styles/mobile-style.less
+++ b/src/styles/mobile-style.less
@@ -3,17 +3,17 @@
 @import "modules/host";
 
 body {
-    padding: 1px;
+    padding: 1vw;
     background: transparent;
 }
 
 .main {
     position: relative;
-    padding: 30px 10px;
+    padding: 8vw 3vw;
     background: #fff;
 
     .footer {
-        letter-spacing: 5px;
+        letter-spacing: 3vw;
     }
 
     &-version {
@@ -21,7 +21,7 @@ body {
         bottom: 0;
         right: 7px;
         color: #eee;
-        font-size: 12px;
+        font-size: 5vw;
     }
 
     &-popup {
@@ -29,32 +29,33 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 20px;
-        box-shadow: 0 0px 20px 0 rgba(0,0,0,.2);
+        margin: 5vw;
+        box-shadow: 0 0px 5vw 0 rgba(0,0,0,.2);
 
         &__logo {
-            width: 35px;
-            height: 37px;
+            width: 11vw;
+            height: 11vw;
 
             &.adguard-assistant-button-main-logo {
                 background-image: url("img/logo.svg");
+                background-repeat: no-repeat;
             }
         }
 
         &__title {
-            font-size: 16px;
+            font-size: 6vw;
+            margin: 3vw 0;
         }
 
         &__content {
-            font-size: 13px;
-            padding: 0 25px;
-            margin-bottom: 25px;
+            font-size: 5vw;
+            padding: 0 3vw;
+            margin-bottom: 5vw;
         }
 
         &__btn {
-            font-size: 14px;
-            padding: 10px;
-            width: 110px;
+            font-size: 5vw;
+            padding: 2vh 8vw;
             border: 1px solid #dedede;
             border-radius: 3px;
             background: #fff;
@@ -82,21 +83,22 @@ body {
     }
 
     &-menu {
-        margin: 20px;
-        padding: 15px;
+        margin: 4vw;
+        padding: 4vw;
         display: flex;
         justify-content: space-between;
         border-radius: 2px;
-        box-shadow: 0 0 20px -2px rgba(0,0,0,.3);
+        box-shadow: 0 0 4vw -2px rgba(0,0,0,.3);
 
         &__btn {
             font-size: 0;
-            width: 40px;
-            height: 40px;
+            width: 12vw;
+            height: 12vw;
             border: 1px solid #dedede;
             border-radius: 3px;
             background-repeat: no-repeat;
             background-position: 50%;
+            background-size: 40%;
             position: relative;
             background-color: #fff;
 
@@ -122,57 +124,18 @@ body {
             }
 
             &--plus {
-
-                &:after {
-                    content: '';
-                    position: absolute;
-                    height: 2px;
-                    width: 16px;
-                    top: 18px;
-                    left: 11px;
-                    background-color: #555555;
-                }
-
-                &:before {
-                    content: '';
-                    position: absolute;
-                    width: 2px;
-                    height: 16px;
-                    left: 18px;
-                    top: 11px;
-                    background-color: #555555;
-                }
+                background-image: url(img/plus.svg);
 
                 &:active {
-                    &:after {
-                        background-color: #fff;
-                    }
-
-                    &:before {
-                        background-color: #fff;
-                    }
+                    background-image: url(img/plus.svg);
                 }
             }
 
             &--minus {
-                &:after {
-                    content: '';
-                    position: absolute;
-                    height: 2px;
-                    width: 16px;
-                    top: 18px;
-                    left: 11px;
-                    background-color: #555555;
-                }
+                background-image: url(img/minus.svg);
 
                 &:active {
-                    &:after {
-                        background-color: #fff;
-                    }
-
-                    &:before {
-                        background-color: #fff;
-                    }
+                    background-image: url(img/minus.svg);
                 }
             }
 
