--- a/src/styles/selector.less
+++ b/src/styles/selector.less
@@ -6,6 +6,7 @@ iframe#adguard-assistant-dialog {
     border-radius: 3px;
     box-shadow: 0 0 10px 3px rgba(162, 161, 161, .3);
     z-index: 2147483646;
+    display: block!important;
 }
 
 .sg_hide_element {
