Assistant icon centered fix

--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -29,7 +29,7 @@
     min-width: auto !important;
     max-width: auto !important;
     background-size: 21px!important;
-    background-position: 50% 11px!important;
+    background-position: center center!important;
     background-repeat: no-repeat!important;
     background-color: #fff!important;
     border: none !important;
