fix/266 update locales and change element id

--- a/src/templates/sliderMenu.html
+++ b/src/templates/sliderMenu.html
@@ -30,7 +30,7 @@
                 <span class="element-rule_expand-link_arr"></span>
                 </span>
             </div>
-            <div class="element-rule_form" id="adv-settings">
+            <div class="element-rule_form" id="advanced-settings">
                 <div class="element-rule_form-cont">
                     <div class="element-rule_fieldset" id="one-domain-checkbox-block">
                         <input class="form-ui-control" id="one-domain-checkbox" type="checkbox" />
