--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -3,7 +3,7 @@
 @import "modules/host";
 
 .adguard-assistant-button-main-logo {
-    background-image: url("img/logo.svg")!important;
+    background-image: url("./img/logo.svg")!important;
 }
 
 .adguard-alert {
