--- a/src/styles/mobile-style.less
+++ b/src/styles/mobile-style.less
@@ -37,7 +37,7 @@ body {
             height: 11vw;
 
             &.adguard-assistant-button-main-logo {
-                background-image: url("img/logo.svg");
+                background-image: url("./img/logo.svg");
                 background-repeat: no-repeat;
             }
         }
@@ -113,38 +113,38 @@ body {
             }
 
             &--accept {
-                background-image: url(img/check.svg);
+                background-image: url('./img/check.svg');
             }
 
             &--preview {
-                background-image: url(img/eye-color.svg);
+                background-image: url('./img/eye-color.svg');
 
                 &:active, &.active {
-                    background-image: url(img/eye.svg);
+                    background-image: url('./img/eye.svg');
                 }
             }
 
             &--plus {
-                background-image: url(img/plus.svg);
+                background-image: url('./img/plus.svg');
 
                 &:active {
-                    background-image: url(img/plus.svg);
+                    background-image: url('./img/plus.svg');
                 }
             }
 
             &--minus {
-                background-image: url(img/minus.svg);
+                background-image: url('./img/minus.svg');
 
                 &:active {
-                    background-image: url(img/minus.svg);
+                    background-image: url('./img/minus.svg');
                 }
             }
 
             &--close {
-                background-image: url(img/cross-color.svg);
+                background-image: url('./img/cross-color.svg');
 
                 &:active {
-                    background-image: url(img/cross.svg);
+                    background-image: url('./img/cross.svg');
                 }
             }
 
