--- a/src/styles/modules/menu.less
+++ b/src/styles/modules/menu.less
@@ -119,32 +119,32 @@
         }
 
         &--clock {
-            background-image: url("img/clock.svg");
+            background-image: url("../img/clock.svg");
             background-size: 16px 19px;
         }
 
         &--landscape {
-            background-image: url("img/landscape.svg");
+            background-image: url("../img/landscape.svg");
             background-size: 19px 17px;
         }
 
         &--report {
-            background-image: url("img/report.svg");
+            background-image: url("../img/report.svg");
             background-size: 16px 17px;
         }
 
         &--security {
-            background-image: url("img/security.svg");
+            background-image: url("../img/security.svg");
             background-size: 15px 16px;
         }
 
         &--extensions {
-            background-image: url("img/extensions.svg");
+            background-image: url("../img/extensions.svg");
             background-size: 18px;
         }
 
         &--settings {
-            background-image: url("img/settings.svg");
+            background-image: url("../img/settings.svg");
             background-size: 19px;
         }
 
