--- a/src/styles/modules/settings.less
+++ b/src/styles/modules/settings.less
@@ -79,7 +79,7 @@
     display: block;
     width: 11px;
     height: 11px;
-    background: url("img/pos-arr.svg") no-repeat;
+    background: url("../img/pos-arr.svg") no-repeat;
     background-size: 44px 22px;
 }
 
