--- a/src/styles/modules/sprite.less
+++ b/src/styles/modules/sprite.less
@@ -9,7 +9,7 @@
     width: 1em;
     font-size: 12px;
     line-height: 1;
-    background: url("img/close.svg") no-repeat 0 0 / cover;
+    background: url("../img/close.svg") no-repeat 0 0 / cover;
     opacity: 0.2;
     cursor: pointer;
 
