--- a/src/styles/modules/wot.less
+++ b/src/styles/modules/wot.less
@@ -56,27 +56,27 @@
 }
 
 .adg-wot-confidence-0 {
-    background-image: url(img/wot-confidence-0.svg);
+    background-image: url('../img/wot-confidence-0.svg');
 }
 
 .adg-wot-confidence-1 {
-    background-image: url(img/wot-confidence-1.svg);
+    background-image: url('../img/wot-confidence-1.svg');
 }
 
 .adg-wot-confidence-2 {
-    background-image: url(img/wot-confidence-2.svg);
+    background-image: url('../img/wot-confidence-2.svg');
 }
 
 .adg-wot-confidence-3 {
-    background-image: url(img/wot-confidence-3.svg);
+    background-image: url('../img/wot-confidence-3.svg');
 }
 
 .adg-wot-confidence-4 {
-    background-image: url(img/wot-confidence-4.svg);
+    background-image: url('../img/wot-confidence-4.svg');
 }
 
 .adg-wot-confidence-5 {
-    background-image: url(img/wot-confidence-5.svg);
+    background-image: url('../img/wot-confidence-5.svg');
 }
 
 .confidence-indication,
@@ -99,7 +99,7 @@
     vertical-align: top;
     width: 31px;
     height: 12px;
-    background: url(img/wot-logo.svg) no-repeat 0 0 / cover;
+    background: url('../img/wot-logo.svg') no-repeat 0 0 / cover;
     margin-top: 3px;
 }
 
