--- a/src/templates/mainMenu.html
+++ b/src/templates/mainMenu.html
@@ -5,9 +5,9 @@
             <span class="menu-head_name"></span>
             <div class="confidence-indication wot-hide">
                 <a class="wot-indicator wot-hide" target="_blank" href="http://adguard.com/wot-scorecard.html?domain=habrahabr.ru">
-                    <i id="WotIndication" i18n="menu_wot_reputation_indicator" class="adg-wot tooltip" data-title="Site reputation indicator"></i>
+                    <i id="WotIndication" class="adg-wot tooltip" data-title="Site reputation indicator"></i>
                 </a>
-                <i id="ConfidenceIndication" i18n="menu_wot_reputation_confidence_level" class="adg-wot-confidence tooltip" data-title="Reputation Confidence Level"></i>
+                <i id="ConfidenceIndication" class="adg-wot-confidence tooltip" data-title="Reputation Confidence Level"></i>
             </div>
         </div>
         <div class="menu-head_text wot-hide" id="WotDescriptionText"></div>
