--- a/src/styles/base/light-mode.less
+++ b/src/styles/base/light-mode.less
@@ -3,13 +3,15 @@
 @text-main-color: #343434;
 @text-body-color: #282828;
 
-@basic-green: #36ba53;
-@advanced-settings-title: #36ba53;
-@advanced-settings-title-hover: #257f39;
+@basic-green: #67B279;
+@dark-green: #4D995F;
+
+@basic-red: #BF4829;
+@dark-red: #8E2C13;
+
 @advanced-settings-bg: #f4f4ef;
 @input-border: #cfcfcf;
 
-@btn-cancel-color: #f3523d;
 @close-image: url("../img/close.svg");
 
 
@@ -34,14 +36,14 @@ body {
 .element-rule{
   &_expand-link{
     &_txt{
-      color: @advanced-settings-title;
-      border-bottom: 1px solid @advanced-settings-title;
+      color: @basic-green;
+      border-bottom: 1px solid @basic-green;
     }
     &:hover{
       .element-rule_expand-link{
         &_txt{
-          color: @advanced-settings-title-hover;
-          border-bottom-color: @advanced-settings-title-hover;
+          color: @basic-green;
+          border-bottom-color: @basic-green;
         }
       }
     }
@@ -117,36 +119,36 @@ input[type="checkbox"] {
   background: @basic-green;
   color: #fff;
   &:hover{
-    border-color: darken(@basic-green, 5%);
-    background: darken(@basic-green, 5%);
+    border-color: @dark-green;
+    background: @dark-green;
     color: #fff;
   }
   &.active, &:active{
-    border-color: darken(@basic-green, 5%);
-    background: darken(@basic-green, 5%);
+    border-color: @dark-green;
+    background: @dark-green;
   }
   &.disabled, &[disabled]{
-    border-color: @basic-green;
-    background: @basic-green;
+    border-color: @dark-green;
+    background: @dark-green;
   }
 }
 
 .btn-cancel {
-  border-color: @btn-cancel-color;
-  background: @btn-cancel-color;
+  border-color: @basic-red;
+  background: @basic-red;
   color: #fff;
   &:hover{
-    border-color: darken(@btn-cancel-color, 10%);
-    background: darken(@btn-cancel-color, 10%);
+    border-color: @dark-red;
+    background: @dark-red;
     color: #fff;
   }
   &.active, &:active{
-    border-color: darken(@btn-cancel-color, 10%);
-    background: darken(@btn-cancel-color, 10%);
+    border-color: @dark-red;
+    background: @dark-red;
   }
   &.disabled, &[disabled]{
-    border-color: @btn-cancel-color;
-    background: @btn-cancel-color;
+    border-color: @dark-red;
+    background: @dark-red;
   }
 }
 
