--- a/src/styles/base/light-mode.less
+++ b/src/styles/base/light-mode.less
@@ -5,8 +5,8 @@
 @text-main-color: #343434;
 @text-body-color: #282828;
 
-@basic-green: #67B279;
-@dark-green: #4D995F;
+@basic-green: #36ba53;
+@dark-green: lighten(@basic-green, 40%);
 
 @basic-red: #BF4829;
 @dark-red: #8E2C13;
@@ -165,6 +165,7 @@ input[type="checkbox"] {
 
 .menu,
 .menu-filter,
+.content,
 .foot {
   border-top: 1px solid @border-color;
 }
