--- a/src/styles/base/light-mode.less
+++ b/src/styles/base/light-mode.less
@@ -6,10 +6,10 @@
 @text-body-color: #282828;
 
 @basic-green: #36ba53;
-@dark-green: lighten(@basic-green, 40%);
+@dark-green: lighten(@basic-green, 10%);
 
-@basic-red: #BF4829;
-@dark-red: #8E2C13;
+@basic-red: #f3523d;
+@dark-red: darken(@basic-red, 10%);
 
 @advanced-settings-bg: #f4f4ef;
 @input-border: #cfcfcf;
