--- a/src/styles/base/light-mode.less
+++ b/src/styles/base/light-mode.less
@@ -6,7 +6,7 @@
 @text-body-color: #282828;
 
 @basic-green: #36ba53;
-@dark-green: lighten(@basic-green, 10%);
+@dark-green: darken(@basic-green, 5%);
 
 @basic-red: #f3523d;
 @dark-red: darken(@basic-red, 10%);
