--- a/src/styles/mobile-style.less
+++ b/src/styles/mobile-style.less
@@ -87,17 +87,23 @@ body {
         padding: 4vw;
         display: flex;
         justify-content: space-between;
-        border-radius: 2px;
+        border-radius: 4vw;
         box-shadow: 0 0 4vw -2px rgba(0,0,0,.3);
 
+        &__info {
+            width: 100%;
+            text-align: center;
+        }
+
         &__btn {
+            border: 0;
             font-size: 0;
             width: 12vw;
             height: 12vw;
-            border-radius: 4px;
+            border-radius: 2vw;
             background-repeat: no-repeat;
             background-position: 50%;
-            background-size: 40%;
+            background-size: 100%;
             position: relative;
 
             &:disabled {
@@ -123,19 +129,15 @@ body {
             }
 
             &--minus {
-                background-image: url('./img/minus-dark.svg');
+                background-image: url('./img/minus.svg');
 
                 &:active {
-                    background-image: url('./img/minus-dark.svg');
+                    background-image: url('./img/minus.svg');
                 }
             }
 
             &--close {
-                background-image: url('./img/cross-dark.svg');
-
-                &:active {
-                    background-image: url('./img/cross.svg');
-                }
+                background-image: url('./img/cross.svg');
             }
         }
     }
