AG-11358 Increasing the contrast the "X" button on the dark theme

--- a/src/styles/base/dark-mode.less
+++ b/src/styles/base/dark-mode.less
@@ -91,6 +91,12 @@ body {
 
 .close {
   background: @close-image no-repeat 0 0 / cover;
+
+  opacity: 0.6;
+
+  &:hover {
+    opacity: 1;
+  }
 }
 
 .form-control {
