--- a/src/styles/base/light-mode.less
+++ b/src/styles/base/light-mode.less
@@ -88,6 +88,11 @@ body {
 
 .close {
   background: @close-image no-repeat 0 0 / cover;
+  opacity: 0.2;
+
+  &:hover {
+    opacity: 1;
+  }
 }
 
 .form-control {
