AG-7179 Increase the contrast of the X button

--- a/src/styles/modules/sprite.less
+++ b/src/styles/modules/sprite.less
@@ -10,6 +10,7 @@
     font-size: 12px;
     line-height: 1;
     cursor: pointer;
+    transition: opacity .3s ease;
 
     &:before {
         content: "\00a0";
