--- a/src/templates/mainMenu.html
+++ b/src/templates/mainMenu.html
@@ -4,7 +4,7 @@
         <div class="menu-head_title">
             <span class="menu-head_name"></span>
             <div class="confidence-indication wot-hide">
-                <a class="wot-indicator wot-hide" target="_blank" href="http://adguard.com/wot-scorecard.html?domain=habrahabr.ru">
+                <a class="wot-indicator wot-hide" target="_blank" href="https://link.adtidy.org/forward.html?action=wot_scorecard&from=main_menu&app=assistant&domain=habrahabr.ru">
                     <i id="WotIndication" class="adg-wot tooltip" data-title="Site reputation indicator"></i>
                 </a>
                 <i id="ConfidenceIndication" class="adg-wot-confidence tooltip" data-title="Reputation Confidence Level"></i>
